...

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="Rp100.000"
                    android:textSize="@dimen/money_text" />

                <EditText
                    android:id="@+id/input100k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/count100k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="Rp50.000"
                    android:textSize="@dimen/money_text" />

                <EditText
                    android:id="@+id/input50k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/count50k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="Rp20.000"
                    android:textSize="@dimen/money_text" />

                <EditText
                    android:id="@+id/input20k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/count20k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="Rp10.000"
                    android:textSize="@dimen/money_text" />

                <EditText
                    android:id="@+id/input10k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/count10k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="Rp5.000"
                    android:textSize="@dimen/money_text" />

                <EditText
                    android:id="@+id/input5k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/count5k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="Rp2.000"
                    android:textSize="@dimen/money_text" />

                <EditText
                    android:id="@+id/input2k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/count2k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="Rp1.000"
                    android:textSize="@dimen/money_text" />

                <EditText
                    android:id="@+id/input1k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/count1k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="Rp500"
                    android:textSize="@dimen/money_text" />

                <EditText
                    android:id="@+id/input500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/count500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="Rp200"
                    android:textSize="@dimen/money_text" />

                <EditText
                    android:id="@+id/input200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/count200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/input100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/count100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
